# p3dx_laura

p3dx_control/config/: control.yaml
p3dx_control/launch/: control.launch
p3dx_description/: CMakeLists.txt  package.xml
p3dx_description/launch/: description.launch
p3dx_description/urdf/p3dx/: pioneer3dx.xacro  pioneer3dx_chassis.xacro
p3dx_description/urdf/sensors/: _d435.gazebo.xacro  _d435i.gazebo.xacro  _d435i.urdf.xacro  hokuyo_urg04lx.urdf.xacro  hokuyo_urg04lxoutro.urdf.xacro  model_d435i.sdf  orbbec_astra.urdf.xacro  xsens_mti.urdf.xacro
p3dx_description/urdf/sensors/d435i/: _d435.urdf.xacro  _d435i.urdf.xacro
p3dx_gazebo/: imu_modifier.py
p3dx_gazebo/launch/: p3dx_gazebo.launch  p3dx_gazebo_small.launch  spawn_p3dx.launch
